Apply all-apps param - in progress
